docs: mark Phase 4 complete in README with accurate implementation details
- Updated Phase 4 section to reflect applyInPandasWithState streaming path
- Documents tick-based batch parity (rowsBetween windows)
- Adds computed features table with definitions
- Adds environment section (pinned deps, conftest.py, spark-env.ps1)
- Adds test coverage table with pass/skip results